feat: 주가 정보 저장 완료